kernel/atomgit/x86_amd_nb_ 开启 COMPILE_TEST 时编译失败.txt
#标题
x86/amd_nb: 开启 COMPILE_TEST 时编译失败

#内核版本
OLK-6.6

#问题现象
在使能 `COMPILE_TEST` 配置但未定义 `CONFIG_AMD_NB` 的情况下编译内核，`drivers/platform/x86/amd/hsmp/plat.c` 文件出现编译错误，导致构建过程中断。

#主要错误日志
drivers/platform/x86/amd/hsmp/plat.c: In function 'init_platform_device':
drivers/platform/x86/amd/hsmp/plat.c:165:68: error: dereferencing 'void *' pointer [-Werror]
  165 |                 sock->root                      = node_to_amd_nb(i)->root;
      |                                                                    ^~
drivers/platform/x86/amd/hsmp/plat.c:165:68: error: request for member 'root' in something not a structure or union

#问题根因
函数 `node_to_amd_nb()` 在非 AMD 配置下被宏定义为 `NULL`。当驱动代码（如 amd/hsmp）支持 `COMPILE_TEST` 且尝试调用该接口并访问其返回值的成员（如 `->root`）时，预处理器将其展开为 `NULL->root`，导致编译器报错“对非结构体或联合体请求成员”以及“解引用 void 指针”。

#解决方案
将 `node_to_amd_nb(x)` 的定义从宏 `#define node_to_amd_nb(x) NULL` 修改为内联函数。该函数返回 `NULL` 指针，允许编译器正确处理后续的成员访问操作（即使在运行时会因为空指针检查而避免实际解引用），从而修复编译错误。

#来源
https://atomgit.com/openeuler/kernel/commit/701ebf5e41bb09ef2a8aadff7d3d5f0df4df7377